--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@
 
 
  body {
-    background-image: url(../public/quizbackground.png);
+    background-image: url(../src/quizbackground.png);
 
 
  }
